Reorganised, and added more variables to the build.
Reorganised code structure (simplified).
Added variable expansion.
Added variables to the build parameters.
Parsed email body content for build parameters.

--- a/src/main/resources/org/jenkinsci/plugins/pollmailboxtrigger/PollMailboxTrigger/help-host.html
+++ b/src/main/resources/org/jenkinsci/plugins/pollmailboxtrigger/PollMailboxTrigger/help-host.html
@@ -1,3 +1,4 @@
 <div>
-    The <i>Host</i> field, allows you to enter the DNS name/hostname/IP Address of the server, hosting the email account service.
+    The <i>Host</i> field, allows you to enter the DNS name/hostname/IP Address of the server, hosting the email account
+    service.
 </div>
