--- a/src/main/resources/org/jenkinsci/plugins/pollmailboxtrigger/PollMailboxTrigger/help-script.html
+++ b/src/main/resources/org/jenkinsci/plugins/pollmailboxtrigger/PollMailboxTrigger/help-script.html
@@ -1,8 +1,10 @@
 <div>
-    The <i>Advanced Email Properties</i> field, allows you to configure the plugin, using standard key=value property notation.<br/>
+    The <i>Advanced Email Properties</i> field, allows you to configure the plugin, using standard key=value property
+    notation.<br/>
     <br/>
     You can override the following default property values:<br/><br/>
-<div style="border:1px solid grey;background:lightgray;padding:4px;"><pre>
+
+    <div style="border:1px solid grey;background:lightgray;padding:4px;"><pre>
 # Connection configuration
 storeName=imaps
 
@@ -16,7 +18,9 @@ mail.debug=true
 mail.debug.auth=true
 mail.imaps.host=&lt;above_host&gt;
 mail.imaps.port=993
-</pre></div><br/>
+</pre>
+    </div>
+    <br/>
     You can also add <a href="https://javamail.java.net/nonav/docs/api/com/sun/mail/imap/package-summary.html"
-                            target="_blank">java imap properties</a>, to futher configure the connection.
+                        target="_blank">java imap properties</a>, to futher configure the connection.
 </div>
