--- a/src/main/resources/org/jenkinsci/plugins/pollmailboxtrigger/PollMailboxTrigger/help-password.html
+++ b/src/main/resources/org/jenkinsci/plugins/pollmailboxtrigger/PollMailboxTrigger/help-password.html
@@ -1,3 +1,4 @@
 <div>
-    The <i>Password</i> field, allows you to enter the password (<b>N.B.</b> or application password) required to connect to this email account.
+    The <i>Password</i> field, allows you to enter the password (<b>N.B.</b> or application password) required to
+    connect to this email account.
 </div>
