--- a/src/main/resources/org/jenkinsci/plugins/pollmailboxtrigger/PollMailboxTrigger/help-script.html
+++ b/src/main/resources/org/jenkinsci/plugins/pollmailboxtrigger/PollMailboxTrigger/help-script.html
@@ -22,5 +22,5 @@ mail.imaps.port=993
     </div>
     <br/>
     You can also add <a href="https://javamail.java.net/nonav/docs/api/com/sun/mail/imap/package-summary.html"
-                        target="_blank">java imap properties</a>, to futher configure the connection.
+                        target="_blank">java imap properties</a>, to further configure the connection.
 </div>
